--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -26,11 +26,11 @@
 
                 <!-- station details -->
                 <div class="card map-card" ng-if="HomeCtrl.activeStation">
-                    <div class="content-loader padding" ng-if="!HomeCtrl.activeStation.$loaded" ng-cloak>
+                    <div class="content-loader padding" ng-hide="HomeCtrl.activeStation.$loaded" ng-cloak>
                         <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
                     </div>
 
-                    <div ng-if="HomeCtrl.activeStation.$loaded">
+                    <div ng-show="HomeCtrl.activeStation.$loaded">
 
                         <!-- station name, uptime and CB -->
                         <div class="item item-header">
@@ -83,7 +83,7 @@
                 </div>
 
                 <!-- navigate to -->
-                <div ng-click="HomeCtrl.navigate()" ng-if="HomeCtrl.activeStation.$loaded" class="floating-button positive-bg">
+                <div ng-click="HomeCtrl.navigate()" ng-show="HomeCtrl.activeStation.$loaded" class="floating-button positive-bg">
                    <img class="img-responsive" src="assets/img/md_directions.svg">
                 </div>
 
