--- a/scss/app/globals.scss
+++ b/scss/app/globals.scss
@@ -142,14 +142,6 @@ body {
 
             .station-bikes {
                 border-right: solid 1px rgba(0, 0, 0, 0.12);
-
-                .station-number .station-number-text {
-                    margin-right: -20px;
-                }
-
-                .img-responsive {
-                    margin-left: 10px;
-                }
             }
 
             .station-number {
@@ -167,11 +159,14 @@ body {
                 .station-number-text {
                     display: inline-block;
                     font-weight: 300;
-                    font-size: 40px;
+                    font-size: 45px;
                     line-height: 1;
                     margin-bottom: -4px;
-                    margin-left: -10px;
-                    margin-right: -10px;
+                    margin-left: -25px;
+                    margin-right: -30px;
+
+                    // hack for to put text in front of bike icon
+                    opacity: 0.99;
                 }
             }
 
