Implements sidemenu logic and header

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -35,3 +35,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include custom styles
 @import "scss/app/globals";
 @import "scss/app/google-maps";
+@import "scss/app/sidemenu";
