Implements sidemenu structure

--- a/scss/app/globals.scss
+++ b/scss/app/globals.scss
@@ -72,6 +72,12 @@ body {
     margin: 0;
 }
 
+.home-view {
+    .scroll-content {
+        overflow: visible !important;
+    }
+}
+
 /**
  * Information card
  */
