--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -11,7 +11,7 @@
         <img class="img-responsive bar-header-logo" src="assets/img/vliller-header-logo.svg">
     </ion-nav-title>
 
-    <ion-content class="home-content">
+    <ion-content class="home-content" scroll="false">
         <div class="content-loader" ng-show="HomeCtrl.isLoading" ng-cloak>
             <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
         </div>
