--- a/scss/app/sidemenu.scss
+++ b/scss/app/sidemenu.scss
@@ -94,7 +94,7 @@
     }
 
     .button-feedback, .button-feedback:hover {
-        color: $positive-dark;
+        color: $assertive-dark;
         background-color: #ffeeee;
         border-radius: 2px;
         font-size: 12px;
