--- a/www/app/components/sidemenu/sidemenu.view.html
+++ b/www/app/components/sidemenu/sidemenu.view.html
@@ -4,7 +4,7 @@
     </header>
 
     <div class="sidemenu-main white-border-bottom">
-        <button class="button button-light button-block button-feedback">AIDEZ-NOUS, RAPPORTEZ UN BUG</button>
+        <button ng-click="SidemenuCtrl.openBugReport()" class="button button-light button-block button-feedback">AIDEZ-NOUS, RAPPORTEZ UN BUG</button>
 
         <button class="button button-light button-clear">
             <!-- share icon -->
