--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,8 +21,8 @@ $bar-height: 56px !default;
 
 // material colors
 $assertive: #e52b38 !default;
+$assertive-dark: #a40233 !default;
 $positive: #1e97f7 !default;
-$positive-dark: #a40233 !default;
 $energized: #d9a601 !default;
 $calm: #33d699 !default;
 $dark: rgba(0, 0, 0, 0.87) !default;
