--- a/www/app/components/sidemenu/sidemenu.view.html
+++ b/www/app/components/sidemenu/sidemenu.view.html
@@ -29,7 +29,7 @@
     </div>
 
     <footer class="sidemenu-footer">
-        <p>Conçu et développé par <strong ng-click="SidemenuCtrl.openLink('http://alexetmanon.com')">alex et manon</strong></p>
+        <p>Conçu et développé par <a ng-click="SidemenuCtrl.openLink('http://alexetmanon.com')">alex&nbsp;et&nbsp;manon</a></p>
         <p>Version {{ appVersion }}</p>
     </footer>
 </ion-content>
