Adds AppController and write algorithm to solve map bug WIP

--- a/scss/app/sidemenu.scss
+++ b/scss/app/sidemenu.scss
@@ -13,6 +13,14 @@
 }
 
 // Menu size/position
+
+body.menu-open .menu.menu-right {
+    visibility: visible;
+}
+.menu.menu-right {
+    visibility: hidden;
+}
+
 .menu.menu-right {
     width: calc(100% - 50px) !important;
 }
