Removes useless scss

--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear menu-icon" menu-toggle="right"></button>
+            <button class="button button-icon button-clear ion-android-more-vertical" menu-toggle="right"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
