Implements gps loading feature

--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -80,7 +80,7 @@
                         <div class="item item-content" ng-if="HomeCtrl.activeStation.status !== '0'">
                             <p class="station-dead assertive">
                                 Station indisponible
-                            </pb>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -90,15 +90,21 @@
                 <div class="floating-buttons" ng-show="HomeCtrl.activeStation.$loaded">
 
                     <!-- localisation -->
-                    <div ng-click="HomeCtrl.updatePosition()"  class="floating-button light-bg">
+                    <div ng-click="HomeCtrl.updatePosition()"  class="floating-button gps-button light-bg" ng-class="{
+                        'loading': HomeCtrl.isGPSLoading,
+                        'positive-fill': HomeCtrl.isGPSCentered
+                    }">
                         <!-- gps icon -->
-                       <svg class="md-icon" height="26" viewBox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>
+                       <svg class="floating-button-icon md-icon" height="26" viewBox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>
+
+                       <!-- spinner -->
+                       <ion-spinner icon="android" class="floating-button-spinner spinner-positive"></ion-spinner>
                     </div>
 
                     <!-- navigate to -->
-                    <div ng-click="HomeCtrl.navigate()" class="floating-button positive-bg">
+                    <div ng-click="HomeCtrl.navigate()" class="floating-button positive-bg light-fill">
                         <!-- direction icon -->
-                       <svg class="md-icon" height="26" viewBox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg"><path d="M21.71 11.29l-9-9c-.39-.39-1.02-.39-1.41 0l-9 9c-.39.39-.39 1.02 0 1.41l9 9c.39.39 1.02.39 1.41 0l9-9c.39-.38.39-1.01 0-1.41zM14 14.5V12h-4v3H8v-4c0-.55.45-1 1-1h5V7.5l3.5 3.5-3.5 3.5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+                       <svg class="floating-button-icon md-icon" height="26" viewBox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg"><path d="M21.71 11.29l-9-9c-.39-.39-1.02-.39-1.41 0l-9 9c-.39.39-.39 1.02 0 1.41l9 9c.39.39 1.02.39 1.41 0l9-9c.39-.38.39-1.01 0-1.41zM14 14.5V12h-4v3H8v-4c0-.55.45-1 1-1h5V7.5l3.5 3.5-3.5 3.5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
                     </div>
                 </div>
             </div>
