--- a/scss/app/app.scss
+++ b/scss/app/app.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .text-grey {
-    color: rgba(0, 0, 0, 0.54) !important;
+    color: $grey !important;
 }
 
 // force scroll expand (avoid loader to by stuck at the top)
