--- a/scss/app/shared/floating-button.scss
+++ b/scss/app/shared/floating-button.scss
@@ -12,12 +12,37 @@ $animation-duration: 300ms;
     -webkit-animation: scale-in $animation-duration;
     animation: scale-in $animation-duration;
 
-    .md-icon {
-        fill: $light;
+    // default color
+    .floating-button-icon {
+        fill: $grey;
     }
 
-    &.light-bg .md-icon {
-        fill: $positive
+    // loader inside button
+    .floating-button-spinner {
+        display: none;
+    }
+
+    &.loading {
+        .floating-button-spinner {
+            display: block;
+        }
+
+        .floating-button-icon {
+            display: none;
+        }
+    }
+}
+
+@-webkit-keyframes scale-in {
+    from {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        opacity: 0;
+    }
+    to {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
     }
 }
 
