--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,16 +19,11 @@ $dark:                            #444 !default;
 $bar-height: 56px !default;
 // $button-bar-button-height: $bar-height !default;
 
-// material colors
-$assertive: #e52b38 !default;
-$assertive-dark: #a40233 !default;
-$positive: #1e97f7 !default;
-$energized: #d9a601 !default;
-$calm: #33d699 !default;
-$dark: rgba(0, 0, 0, 0.87) !default;
+// custom colors
+@import "scss/app/shared/colors";
 
 // The path for our ionicons font files, relative to the built CSS in www/css
-$ionicons-font-path: "../lib/ionic/fonts" !default;
+$ionicons-font-path: "../../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
