--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -78,9 +78,7 @@
 
                         <!-- station HS -->
                         <div class="item item-content" ng-if="HomeCtrl.activeStation.status !== '0'">
-                            <p class="station-dead assertive">
-                                Station indisponible
-                            </p>
+                            <p class="station-dead assertive">Cette station semble indispoblie. Tente ta chance un peu plus loin&nbsp;!</p>
                         </div>
                     </div>
                 </div>
