--- a/scss/app/shared/floating-button.scss
+++ b/scss/app/shared/floating-button.scss
@@ -1,5 +1,5 @@
 $floating-button-animation-duration: 300ms;
-$floating-button-size: 56px
+$floating-button-size: 56px;
 
 .floating-button {
     display: block;
