Refactor color variables in scss

--- a/scss/app/app.scss
+++ b/scss/app/app.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .text-grey {
-    color: $grey !important;
+    color: $black-54 !important;
 }
 
 // force scroll expand (avoid loader to by stuck at the top)
