--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -12,7 +12,7 @@
     </ion-nav-title>
 
     <ion-content class="home-content" scroll="false">
-        <div class="content-loader" ng-show="HomeCtrl.isLoading" ng-cloak>
+        <div class="content-loader" ng-show="HomeCtrl.isLoading">
             <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
         </div>
 
@@ -28,11 +28,11 @@
                 <!-- station details -->
                 <div class="card map-card" ng-if="HomeCtrl.activeStation">
 
-                    <div class="content-loader padding" ng-hide="HomeCtrl.activeStation.$loaded" ng-cloak>
+                    <div class="content-loader padding" ng-hide="HomeCtrl.activeStation.$loaded">
                         <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
                     </div>
 
-                    <div ng-show="HomeCtrl.activeStation.$loaded">
+                    <div ng-show="HomeCtrl.activeStation.$loaded" ng-cloak>
 
                         <!-- station name, uptime and CB -->
                         <div class="item item-header">
