Implements hide/show map during open/close sidemenu

--- a/scss/app/components/sidemenu.scss
+++ b/scss/app/components/sidemenu.scss
@@ -44,7 +44,7 @@ $sidemenu-animation-time: 200ms;
 /**
  * Sidemenu view
  */
-.sidemenu-view {
+.sidemenu-content {
     color: $light;
     padding: 40px;
     background-image: linear-gradient(to top, #a71e45, $lipstick 100%, $lipstick);
