--- a/scss/app/_fonts.scss
+++ b/scss/app/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Roboto;
-    src: url("../fonts/Roboto-Light.ttf") format("truetype");
+    src: url("assets/fonts/Roboto-Light.ttf") format("truetype");
     font-weight: 300;
     font-style: normal;
 }
@@ -8,21 +8,21 @@
 
 @font-face {
     font-family: Roboto;
-    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+    src: url("assets/fonts/Roboto-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: Roboto;
-    src: url("../fonts/Roboto-Medium.ttf") format("truetype");
+    src: url("assets/fonts/Roboto-Medium.ttf") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: Roboto;
-    src: url("../fonts/Roboto-Bold.ttf") format("truetype");
+    src: url("assets/fonts/Roboto-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
