Replaces ionic icon in button header by svg material one

--- a/scss/app/components/home.scss
+++ b/scss/app/components/home.scss
@@ -2,6 +2,10 @@
     .scroll-content {
         overflow: visible !important;
     }
+
+    .bar .button svg{
+        vertical-align: middle;
+    }
 }
 
 /**
