--- a/src/app/components/home/home.view.html
+++ b/src/app/components/home/home.view.html
@@ -3,7 +3,10 @@
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-android-more-vertical" menu-toggle="right"></button>
+            <button class="button button-clear" menu-toggle="right">
+                <!-- vertical more icon -->
+                <svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/></svg>
+            </button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
