--- a/scss/app/app.scss
+++ b/scss/app/app.scss
@@ -42,6 +42,7 @@ body {
 
 .bar-header {
     border: none !important;
+    background-image: none !important;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
 
     .title {
