--- a/scss/app/components/sidemenu.scss
+++ b/scss/app/components/sidemenu.scss
@@ -105,6 +105,7 @@ $sidemenu-animation-time: 200ms;
         color: $cranberry;
         background-color: #ffeeee;
         border-radius: 2px;
+        line-height: 1.4;
         font-size: 12px;
         font-weight: bold;
         letter-spacing: 0.4px;
