--- a/src/app/components/home/home.view.html
+++ b/src/app/components/home/home.view.html
@@ -1,5 +1,5 @@
 <ion-view class="home-view" hide-back-button="true">
-    <ion-nav-bar class="bar-assertive">
+    <ion-nav-bar class="bar-assertive" align-title="left">
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
         <ion-nav-buttons side="right">
