Updates github link

--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -26,7 +26,7 @@
 
         <div class="sidemenu-about white-border-bottom">
             <h4>À propos</h4>
-            <button ng-click="SidemenuCtrl.openLink('https://github.com/blckshrk/vliller')" class="button button-light button-clear">Données &amp; sources</button>
+            <button ng-click="SidemenuCtrl.openLink('https://github.com/alexetmanon/vliller')" class="button button-light button-clear">Données &amp; sources</button>
         </div>
 
         <footer class="sidemenu-footer">
