One time binding for app version number

--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -31,7 +31,7 @@
 
         <footer class="sidemenu-footer">
             <p>Conçu et développé par <a ng-click="SidemenuCtrl.openLink('http://alexetmanon.com')">alex&nbsp;et&nbsp;manon</a></p>
-            <p>Version {{ appVersion }}</p>
+            <p>Version {{ ::appVersion }}</p>
         </footer>
     </ion-content>
 </ion-view>
