--- a/scss/app/components/home.scss
+++ b/scss/app/components/home.scss
@@ -26,7 +26,7 @@ $card-height: 154px;
         background-color: #fff;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
         margin: 0;
-        height: 100%;
+        min-height: 100%;
 
         .item {
             border: none;
