Manage offline mode on card

--- a/src/app/components/home/home.view.html
+++ b/src/app/components/home/home.view.html
@@ -71,7 +71,7 @@
                         </div>
 
                         <!-- station bike/attachs -->
-                        <div class="item item-content" ng-if="HomeCtrl.activeStation.status === '0' && !HomeCtrl.isOffline">
+                        <div class="item item-content" ng-if="HomeCtrl.activeStation.status === '0'">
 
                             <!-- bikes -->
                             <div class="station-bikes">
