--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -1,5 +1,5 @@
 <ion-view class="sidemenu-view">
-    <ion-content class="sidemenu-content">
+    <ion-content class="sidemenu-content" on-swipe-right="SidemenuCtrl.close()">
         <header class="sidemenu-header white-border-bottom">
             <img class="img-responsive" src="assets/img/vliller-header-sidemenu-logo.svg">
         </header>
