Implements close icon

--- a/scss/app/components/sidemenu.scss
+++ b/scss/app/components/sidemenu.scss
@@ -55,6 +55,11 @@ $sidemenu-animation-time: 200ms;
         padding-top: 1px;
     }
 
+    .sidemenu-close {
+        text-align: right;
+        margin: -20px -20px 0 0;
+    }
+
     .sidemenu-header {
         text-align: center;
         padding: 0 20px 30px 20px;
