--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -11,7 +11,7 @@
 
         <div class="sidemenu-main white-border-bottom">
 
-            <button ng-click="SidemenuCtrl.openBugReport()" class="button button-light button-block button-feedback">AIDEZ-NOUS, RAPPORTEZ UN BUG</button>
+            <button ng-click="SidemenuCtrl.openBugReport()" class="button button-light button-block button-feedback">AIDEZ-NOUS, RAPPORTEZ&nbsp;UN&nbsp;BUG</button>
 
             <button ng-click="SidemenuCtrl.openSocialSharing()" class="button button-light button-clear">
                 <!-- share icon -->
