--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -38,5 +38,7 @@
             <p>Conçu et développé par <a ng-click="SidemenuCtrl.openLink('http://alexetmanon.com')">alex&nbsp;et&nbsp;manon</a></p>
             <p>Version {{ ::appVersion }}</p>
         </footer>
+
+        <img class="sidemenu-halloween-zombie" src="assets/img/vliller-halloween-zombie.png">
     </ion-content>
 </ion-view>
