Update bloody header

--- a/src/app/components/home/home.view.html
+++ b/src/app/components/home/home.view.html
@@ -1,4 +1,6 @@
 <ion-view class="home-view" hide-back-button="true">
+    <div class="bar-header-halloween-bg"></div>
+
     <ion-nav-bar class="bar-assertive" align-title="left">
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
