--- a/scss/app/components/home.scss
+++ b/scss/app/components/home.scss
@@ -14,7 +14,7 @@
 
     .bar-header-halloween-bg {
         position: absolute;
-        top: -30px;
+        top: -50px;
         height: 140px;
         width: 100%;
         background: url('assets/img/vliller-header-bg-halloween.svg') center top no-repeat;
@@ -29,6 +29,10 @@
 .platform-ios.platform-cordova {
     .home-content {
         top: $bar-height - 20px + $ios-statusbar-height !important;
+    }
+
+    .bar-header-halloween-bg {
+        top: -50px + $ios-statusbar-height;
     }
 }
 
