--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -35,7 +35,7 @@
         </div>
 
         <footer class="sidemenu-footer">
-            <p>Conçu et développé par <a ng-click="SidemenuCtrl.openLink('http://alexetmanon.com')">alex&nbsp;et&nbsp;manon</a></p>
+            <p>Conçu et développé par <a ng-click="SidemenuCtrl.openLink('http://alexetmanon.com')">alex&nbsp;et&nbsp;manon</a> et tous nos supers contributeurs !</p>
             <p>Version {{ ::appVersion }}</p>
         </footer>
     </ion-content>
