--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,6 +2,15 @@
 // http://ionicframework.com/docs/v2/theming/
 @import "ionic.globals";
 
+// Zeplin variables
+$lipstick: #e52b38;
+$cranberry: #a40233;
+$azure: #1e97f7;
+$mustard: #d9a601;
+$white: #f5f5f5;
+$black-54: rgba(0, 0, 0, 0.54);
+$black-87: rgba(0, 0, 0, 0.87);
+
 
 // Shared Variables
 // --------------------------------------------------
@@ -10,7 +19,7 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$text-color:        #000;
+$text-color:        $black-87;
 $background-color:  #fff;
 
 
@@ -23,11 +32,15 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+    primary:    $lipstick,
+    secondary:  $azure,
+    danger:     #f53d3d,
+    light:      #fff,
+    dark:       $black-87,
+    lipstick:   $lipstick,
+    cranberry:  $cranberry,
+    azure:      $azure,
+    mustard:    $mustard
 );
 
 
