--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -1,4 +1,16 @@
 <div class="station-card">
     <div>TODO: Title</div>
     <div>TODO: Content</div>
+
+    <ion-fab top right edge>
+        <button ion-fab color="mustard">
+            <ion-icon name="star"></ion-icon>
+        </button>
+        <ion-fab-list side="top">
+            <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+        </ion-fab-list>
+    </ion-fab>
 </div>
